<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <RelativeLayout
        android:background="@color/app_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <TextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/_19sdp"
            android:text="LOGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout

        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <RelativeLayout
            android:visibility="visible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_110sdp"

                    />


        </RelativeLayout>


        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">



            <RelativeLayout

                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText

                    android:id="@+id/login_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_edittext_bg"


                    android:gravity="center_vertical"
                    android:hint="Email Id"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10sdp"


                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"

                    android:textSize="16sp" />
            </RelativeLayout>



        </LinearLayout>




        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">



            <RelativeLayout


                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <EditText

                    android:textCursorDrawable="@drawable/color_cursor"

                    android:layout_centerVertical="true"
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_40sdp"


                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10sdp"



                    android:singleLine="true"
                    android:background="@drawable/login_edittext_bg"

                    android:textSize="16sp" />






            </RelativeLayout>



        </LinearLayout>






        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"

            android:background="@color/app_color"
            android:textColor="@color/colorwhite"

            android:padding="3dp"
            android:text="Login"
            android:textAllCaps="false"


            android:textSize="@dimen/_15sdp"
            />




    </LinearLayout>


    <RelativeLayout
        android:id="@+id/term_condition"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:lines="2"
                android:visibility="gone"
                android:text="@string/terms_conditions"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />


        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/view_signup"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/term_condition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Sign Up!"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_below="@+id/view_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

           android:textStyle="bold"
            android:text="@string/forgot"
            android:textColor="@color/app_color"
            android:textSize="18sp" />
    </RelativeLayout>



    </RelativeLayout>


    <RelativeLayout
        android:elevation="@dimen/_10sdp"
        android:id="@+id/loading_view"
        android:background="#6d000000"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView



            app:cardBackgroundColor="@color/colorwhite"
            app:cardElevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp">



            <com.wang.avi.AVLoadingIndicatorView
                android:layout_gravity="center"

                android:elevation="@dimen/_10sdp"

                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:indicatorColor="@color/app_color"
                app:indicatorName="BallSpinFadeLoaderIndicator" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</RelativeLayout>