<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6c000000"
        android:elevation="@dimen/_10sdp"
        android:visibility="gone">


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="@color/colorwhite"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp">


            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avi"
                style="@style/AVLoadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="@dimen/_10sdp"
                android:visibility="gone"
                app:indicatorColor="@color/app_color"
                app:indicatorName="BallSpinFadeLoaderIndicator" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/app_color">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                app:srcCompat="@drawable/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="UPLOAD"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/_19sdp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/edit_cost"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/login_edittext_bg"
                android:hint="Cost"
                android:inputType="numberDecimal"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_fileName"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/filename"
                android:inputType="text"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/check_singleDoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:checked="true"
                android:text="@string/save_as_one_document"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/addSignature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:background="@color/app_color"
                    android:drawableStart="@drawable/ic_baseline_add"
                    android:text="Signature"
                    android:visibility="visible"
                    android:layout_weight="1"
                    android:textColor="@color/colorwhite" />
                <Button
                    android:id="@+id/uploadSignature"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:background="@color/app_color"
                    android:drawableStart="@drawable/ic_arrow_up"
                    android:text="Signature"
                    android:textColor="@color/colorwhite" />
                <Button
                    android:id="@+id/upload_doc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/app_color"
                    android:text="@string/upload"
                    android:textColor="@color/colorwhite" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/login_edittext_bg">

                <ImageView
                    android:id="@+id/signatureImage"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_centerInParent="true"
                    android:layout_height="@dimen/_80sdp"
                    />

            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>


</RelativeLayout>